--- a/index.html
+++ b/index.html
@@ -33,70 +33,74 @@
 <li><a href="#season" id="toc-season"><span
 class="toc-section-number">1</span> 2024 season</a>
 <ul>
+<li><a href="#rd20-mexico-city-grand-prix"
+id="toc-rd20-mexico-city-grand-prix"><span
+class="toc-section-number">1.1</span> Rd20 Mexico City Grand
+Prix</a></li>
 <li><a href="#rd19-united-state-grand-prix"
 id="toc-rd19-united-state-grand-prix"><span
-class="toc-section-number">1.1</span> Rd19 United State Grand
+class="toc-section-number">1.2</span> Rd19 United State Grand
 Prix</a></li>
 <li><a href="#rd18-singapore-grand-prix"
 id="toc-rd18-singapore-grand-prix"><span
-class="toc-section-number">1.2</span> Rd18 Singapore Grand Prix</a></li>
+class="toc-section-number">1.3</span> Rd18 Singapore Grand Prix</a></li>
 <li><a href="#rd17-azerbaijan-grand-prix"
 id="toc-rd17-azerbaijan-grand-prix"><span
-class="toc-section-number">1.3</span> Rd17 Azerbaijan Grand
+class="toc-section-number">1.4</span> Rd17 Azerbaijan Grand
 Prix</a></li>
 <li><a href="#rd16-italian-grand-prix"
 id="toc-rd16-italian-grand-prix"><span
-class="toc-section-number">1.4</span> Rd16 Italian Grand Prix</a></li>
+class="toc-section-number">1.5</span> Rd16 Italian Grand Prix</a></li>
 <li><a href="#rd15-dutch-grand-prix"
 id="toc-rd15-dutch-grand-prix"><span
-class="toc-section-number">1.5</span> Rd15 Dutch Grand Prix</a></li>
+class="toc-section-number">1.6</span> Rd15 Dutch Grand Prix</a></li>
 <li><a href="#rd14-belgian-grand-prix"
 id="toc-rd14-belgian-grand-prix"><span
-class="toc-section-number">1.6</span> Rd14 Belgian Grand Prix</a></li>
+class="toc-section-number">1.7</span> Rd14 Belgian Grand Prix</a></li>
 <li><a href="#rd13-hungarian-grand-prix"
 id="toc-rd13-hungarian-grand-prix"><span
-class="toc-section-number">1.7</span> Rd13 Hungarian Grand Prix</a></li>
+class="toc-section-number">1.8</span> Rd13 Hungarian Grand Prix</a></li>
 <li><a href="#rd12-british-grand-prix"
 id="toc-rd12-british-grand-prix"><span
-class="toc-section-number">1.8</span> Rd12 British Grand Prix</a></li>
+class="toc-section-number">1.9</span> Rd12 British Grand Prix</a></li>
 <li><a href="#rd11-austrian-grand-prix"
 id="toc-rd11-austrian-grand-prix"><span
-class="toc-section-number">1.9</span> Rd11 Austrian Grand Prix</a></li>
+class="toc-section-number">1.10</span> Rd11 Austrian Grand Prix</a></li>
 <li><a href="#rd10-spanish-grand-prix"
 id="toc-rd10-spanish-grand-prix"><span
-class="toc-section-number">1.10</span> Rd10 Spanish Grand Prix</a></li>
+class="toc-section-number">1.11</span> Rd10 Spanish Grand Prix</a></li>
 <li><a href="#rd09-canadian-grand-prix"
 id="toc-rd09-canadian-grand-prix"><span
-class="toc-section-number">1.11</span> Rd09 Canadian Grand Prix</a></li>
+class="toc-section-number">1.12</span> Rd09 Canadian Grand Prix</a></li>
 <li><a href="#rd08-monaco-grand-prix"
 id="toc-rd08-monaco-grand-prix"><span
-class="toc-section-number">1.12</span> Rd08 Monaco Grand Prix</a></li>
+class="toc-section-number">1.13</span> Rd08 Monaco Grand Prix</a></li>
 <li><a href="#rd07-emilia-romagna-grand-prix"
 id="toc-rd07-emilia-romagna-grand-prix"><span
-class="toc-section-number">1.13</span> Rd07 Emilia Romagna Grand
+class="toc-section-number">1.14</span> Rd07 Emilia Romagna Grand
 Prix</a></li>
 <li><a href="#rd06-miami-grand-prix"
 id="toc-rd06-miami-grand-prix"><span
-class="toc-section-number">1.14</span> Rd06 Miami Grand Prix</a></li>
+class="toc-section-number">1.15</span> Rd06 Miami Grand Prix</a></li>
 <li><a href="#rd05-chinese-grand-prix"
 id="toc-rd05-chinese-grand-prix"><span
-class="toc-section-number">1.15</span> Rd05 Chinese Grand Prix</a></li>
+class="toc-section-number">1.16</span> Rd05 Chinese Grand Prix</a></li>
 <li><a href="#rd04-japanese-grand-prix"
 id="toc-rd04-japanese-grand-prix"><span
-class="toc-section-number">1.16</span> Rd04 Japanese Grand Prix</a></li>
+class="toc-section-number">1.17</span> Rd04 Japanese Grand Prix</a></li>
 <li><a href="#rd03-australian-grand-prix"
 id="toc-rd03-australian-grand-prix"><span
-class="toc-section-number">1.17</span> Rd03 Australian Grand
+class="toc-section-number">1.18</span> Rd03 Australian Grand
 Prix</a></li>
 <li><a href="#rd02-saudi-arabian-grand-prix"
 id="toc-rd02-saudi-arabian-grand-prix"><span
-class="toc-section-number">1.18</span> Rd02 Saudi Arabian Grand
+class="toc-section-number">1.19</span> Rd02 Saudi Arabian Grand
 Prix</a></li>
 <li><a href="#rd01-bahrain-grand-prix"
 id="toc-rd01-bahrain-grand-prix"><span
-class="toc-section-number">1.19</span> Rd01 Bahrain Grand Prix</a></li>
+class="toc-section-number">1.20</span> Rd01 Bahrain Grand Prix</a></li>
 <li><a href="#pre-season-test" id="toc-pre-season-test"><span
-class="toc-section-number">1.20</span> Pre-season test</a></li>
+class="toc-section-number">1.21</span> Pre-season test</a></li>
 </ul></li>
 <li><a href="#previous-season" id="toc-previous-season"><span
 class="toc-section-number">2</span> Previous season</a></li>
@@ -104,8 +108,27 @@ class="toc-section-number">2</span> Previous season</a></li>
 </nav>
 <h1 data-number="1" id="season"><span
 class="header-section-number">1</span> 2024 season</h1>
-<h2 data-number="1.1" id="rd19-united-state-grand-prix"><span
-class="header-section-number">1.1</span> Rd19 United State Grand
+<h2 data-number="1.1" id="rd20-mexico-city-grand-prix"><span
+class="header-section-number">1.1</span> Rd20 Mexico City Grand
+Prix</h2>
+<p><a href="./2024/2024-Rd20-Mexico-City-Grand-Prix-Practice-1.pdf">FP1:
+Plot PDF</a><br />
+<a
+href="./2024/2024-Rd20-Mexico-City-Grand-Prix-Practice-1_laptime.csv">FP1:
+laptime csv</a><br />
+<a
+href="./2024/2024-Rd20-Mexico-City-Grand-Prix-Practice-1_rcm.csv">FP1:
+race control message csv</a></p>
+<p><a href="./2024/2024-Rd20-Mexico-City-Grand-Prix-Practice-2.pdf">FP2:
+Plot PDF</a><br />
+<a
+href="./2024/2024-Rd20-Mexico-City-Grand-Prix-Practice-2_laptime.csv">FP2:
+laptime csv</a><br />
+<a
+href="./2024/2024-Rd20-Mexico-City-Grand-Prix-Practice-2_rcm.csv">FP2:
+race control message csv</a></p>
+<h2 data-number="1.2" id="rd19-united-state-grand-prix"><span
+class="header-section-number">1.2</span> Rd19 United State Grand
 Prix</h2>
 <p><a
 href="./2024/2024-Rd19-United-States-Grand-Prix-Practice-1.pdf">FP1:
@@ -155,8 +178,8 @@ href="./2024/2024-Rd19-United-States-Grand-Prix-Race_laptime.csv">R:ALL
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd19-United-States-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.2" id="rd18-singapore-grand-prix"><span
-class="header-section-number">1.2</span> Rd18 Singapore Grand Prix</h2>
+<h2 data-number="1.3" id="rd18-singapore-grand-prix"><span
+class="header-section-number">1.3</span> Rd18 Singapore Grand Prix</h2>
 <p><a href="./2024/2024-Rd18-Singapore-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -194,8 +217,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd18-Singapore-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.3" id="rd17-azerbaijan-grand-prix"><span
-class="header-section-number">1.3</span> Rd17 Azerbaijan Grand Prix</h2>
+<h2 data-number="1.4" id="rd17-azerbaijan-grand-prix"><span
+class="header-section-number">1.4</span> Rd17 Azerbaijan Grand Prix</h2>
 <p><a href="./2024/2024-Rd17-Azerbaijan-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -234,8 +257,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd17-Azerbaijan-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.4" id="rd16-italian-grand-prix"><span
-class="header-section-number">1.4</span> Rd16 Italian Grand Prix</h2>
+<h2 data-number="1.5" id="rd16-italian-grand-prix"><span
+class="header-section-number">1.5</span> Rd16 Italian Grand Prix</h2>
 <p><a href="./2024/2024-Rd16-Italian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -271,8 +294,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd16-Italian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.5" id="rd15-dutch-grand-prix"><span
-class="header-section-number">1.5</span> Rd15 Dutch Grand Prix</h2>
+<h2 data-number="1.6" id="rd15-dutch-grand-prix"><span
+class="header-section-number">1.6</span> Rd15 Dutch Grand Prix</h2>
 <p><a href="./2024/2024-Rd15-Dutch-Grand-Prix-Practice-1.pdf">FP1: Plot
 PDF</a><br />
 <a href="./2024/2024-Rd15-Dutch-Grand-Prix-Practice-1_laptime.csv">FP1:
@@ -305,8 +328,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd15-Dutch-Grand-Prix-Race_rcm.csv">R:Race Control
 Message CSV</a></p>
-<h2 data-number="1.6" id="rd14-belgian-grand-prix"><span
-class="header-section-number">1.6</span> Rd14 Belgian Grand Prix</h2>
+<h2 data-number="1.7" id="rd14-belgian-grand-prix"><span
+class="header-section-number">1.7</span> Rd14 Belgian Grand Prix</h2>
 <p><a href="./2024/2024-Rd14-Belgian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -342,8 +365,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd14-Belgian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.7" id="rd13-hungarian-grand-prix"><span
-class="header-section-number">1.7</span> Rd13 Hungarian Grand Prix</h2>
+<h2 data-number="1.8" id="rd13-hungarian-grand-prix"><span
+class="header-section-number">1.8</span> Rd13 Hungarian Grand Prix</h2>
 <p><a href="./2024/2024-Rd13-Hungarian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -381,8 +404,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd13-Hungarian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.8" id="rd12-british-grand-prix"><span
-class="header-section-number">1.8</span> Rd12 British Grand Prix</h2>
+<h2 data-number="1.9" id="rd12-british-grand-prix"><span
+class="header-section-number">1.9</span> Rd12 British Grand Prix</h2>
 <p><a href="./2024/2024-Rd12-British-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -418,8 +441,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd12-British-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.9" id="rd11-austrian-grand-prix"><span
-class="header-section-number">1.9</span> Rd11 Austrian Grand Prix</h2>
+<h2 data-number="1.10" id="rd11-austrian-grand-prix"><span
+class="header-section-number">1.10</span> Rd11 Austrian Grand Prix</h2>
 <p><a href="./2024/2024-Rd11-Austrian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -460,8 +483,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd11-Austrian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.10" id="rd10-spanish-grand-prix"><span
-class="header-section-number">1.10</span> Rd10 Spanish Grand Prix</h2>
+<h2 data-number="1.11" id="rd10-spanish-grand-prix"><span
+class="header-section-number">1.11</span> Rd10 Spanish Grand Prix</h2>
 <p><a href="./2024/2024-Rd10-Spanish-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -497,8 +520,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd10-Spanish-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.11" id="rd09-canadian-grand-prix"><span
-class="header-section-number">1.11</span> Rd09 Canadian Grand Prix</h2>
+<h2 data-number="1.12" id="rd09-canadian-grand-prix"><span
+class="header-section-number">1.12</span> Rd09 Canadian Grand Prix</h2>
 <p><a href="./2024/2024-Rd09-Canadian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -535,8 +558,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd09-Canadian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.12" id="rd08-monaco-grand-prix"><span
-class="header-section-number">1.12</span> Rd08 Monaco Grand Prix</h2>
+<h2 data-number="1.13" id="rd08-monaco-grand-prix"><span
+class="header-section-number">1.13</span> Rd08 Monaco Grand Prix</h2>
 <p><a href="./2024/2024-Rd08-Monaco-Grand-Prix-Practice-1.pdf">FP1: Plot
 PDF</a><br />
 <a href="./2024/2024-Rd08-Monaco-Grand-Prix-Practice-1_laptime.csv">FP1:
@@ -569,8 +592,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd08-Monaco-Grand-Prix-Race_rcm.csv">R:Race Control
 Message CSV</a></p>
-<h2 data-number="1.13" id="rd07-emilia-romagna-grand-prix"><span
-class="header-section-number">1.13</span> Rd07 Emilia Romagna Grand
+<h2 data-number="1.14" id="rd07-emilia-romagna-grand-prix"><span
+class="header-section-number">1.14</span> Rd07 Emilia Romagna Grand
 Prix</h2>
 <p><a
 href="./2024/2024-Rd07-Emilia-Romagna-Grand-Prix-Practice-1.pdf">FP1:
@@ -618,8 +641,8 @@ href="./2024/2024-Rd07-Emilia-Romagna-Grand-Prix-Race_laptime.csv">R:ALL
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd07-Emilia-Romagna-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.14" id="rd06-miami-grand-prix"><span
-class="header-section-number">1.14</span> Rd06 Miami Grand Prix</h2>
+<h2 data-number="1.15" id="rd06-miami-grand-prix"><span
+class="header-section-number">1.15</span> Rd06 Miami Grand Prix</h2>
 <p><a href="./2024/2024-Rd06-Miami-Grand-Prix-Practice-1.pdf">FP1: Plot
 PDF</a><br />
 <a href="./2024/2024-Rd06-Miami-Grand-Prix-Practice-1_laptime.csv">FP1:
@@ -656,8 +679,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd06-Miami-Grand-Prix-Race_rcm.csv">R:Race Control
 Message CSV</a></p>
-<h2 data-number="1.15" id="rd05-chinese-grand-prix"><span
-class="header-section-number">1.15</span> Rd05 Chinese Grand Prix</h2>
+<h2 data-number="1.16" id="rd05-chinese-grand-prix"><span
+class="header-section-number">1.16</span> Rd05 Chinese Grand Prix</h2>
 <p><a href="./2024/2024-Rd05-Chinese-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -697,8 +720,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd05-Chinese-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.16" id="rd04-japanese-grand-prix"><span
-class="header-section-number">1.16</span> Rd04 Japanese Grand Prix</h2>
+<h2 data-number="1.17" id="rd04-japanese-grand-prix"><span
+class="header-section-number">1.17</span> Rd04 Japanese Grand Prix</h2>
 <p><a href="./2024/2024-Rd04-Japanese-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -736,8 +759,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd04-Japanese-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.17" id="rd03-australian-grand-prix"><span
-class="header-section-number">1.17</span> Rd03 Australian Grand
+<h2 data-number="1.18" id="rd03-australian-grand-prix"><span
+class="header-section-number">1.18</span> Rd03 Australian Grand
 Prix</h2>
 <p><a href="./2024/2024-Rd03-Australian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
@@ -776,8 +799,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd03-Australian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.18" id="rd02-saudi-arabian-grand-prix"><span
-class="header-section-number">1.18</span> Rd02 Saudi Arabian Grand
+<h2 data-number="1.19" id="rd02-saudi-arabian-grand-prix"><span
+class="header-section-number">1.19</span> Rd02 Saudi Arabian Grand
 Prix</h2>
 <p><a
 href="./2024/2024-Rd02-Saudi-Arabian-Grand-Prix-Practice-1.pdf">FP1:
@@ -825,8 +848,8 @@ href="./2024/2024-Rd02-Saudi-Arabian-Grand-Prix-Race_laptime.csv">R:ALL
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd02-Saudi-Arabian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.19" id="rd01-bahrain-grand-prix"><span
-class="header-section-number">1.19</span> Rd01 Bahrain Grand Prix</h2>
+<h2 data-number="1.20" id="rd01-bahrain-grand-prix"><span
+class="header-section-number">1.20</span> Rd01 Bahrain Grand Prix</h2>
 <p><a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -862,8 +885,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.20" id="pre-season-test"><span
-class="header-section-number">1.20</span> Pre-season test</h2>
+<h2 data-number="1.21" id="pre-season-test"><span
+class="header-section-number">1.21</span> Pre-season test</h2>
 <p><a href="./2024/2024-Pre-Season-Testing-1-1.pdf">Day1: Plot
 PDF</a><br />
 <a href="./2024/2024-Pre-Season-Testing-1-1_laptime.csv">Day1: laptime
