--- a/index.html
+++ b/index.html
@@ -127,6 +127,21 @@ laptime csv</a><br />
 <a
 href="./2024/2024-Rd20-Mexico-City-Grand-Prix-Practice-2_rcm.csv">FP2:
 race control message csv</a></p>
+<p><a href="./2024/2024-Rd20-Mexico-City-Grand-Prix-Practice-3.pdf">FP3:
+Plot PDF</a><br />
+<a
+href="./2024/2024-Rd20-Mexico-City-Grand-Prix-Practice-3_laptime.csv">FP3:
+laptime csv</a><br />
+<a
+href="./2024/2024-Rd20-Mexico-City-Grand-Prix-Practice-3_rcm.csv">FP3:
+race control message csv</a></p>
+<p><a href="./2024/2024-Rd20-Mexico-City-Grand-Prix-Qualifying.pdf">Q:
+Plot PDF</a><br />
+<a
+href="./2024/2024-Rd20-Mexico-City-Grand-Prix-Qualifying_laptime.csv">Q:
+laptime csv</a><br />
+<a href="./2024/2024-Rd20-Mexico-City-Grand-Prix-Qualifying_rcm.csv">Q:
+race control message csv</a></p>
 <h2 data-number="1.2" id="rd19-united-state-grand-prix"><span
 class="header-section-number">1.2</span> Rd19 United State Grand
 Prix</h2>
