--- a/index.html
+++ b/index.html
@@ -172,6 +172,15 @@ laptime csv</a><br />
 <a
 href="./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Practice-2_rcm.csv">FP2:
 race control message csv</a></p>
+<p><a
+href="./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Practice-3.pdf">FP3:
+Plot PDF</a><br />
+<a
+href="./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Practice-3_laptime.csv">FP3:
+laptime csv</a><br />
+<a
+href="./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Practice-3_rcm.csv">FP3:
+race control message csv</a></p>
 <h2 data-number="1.2" id="rd06-miami-grand-prix"><span
 class="header-section-number">1.2</span> Rd06 Miami Grand Prix</h2>
 <p><a href="./2025/2025-Rd06-Miami-Grand-Prix-Practice-1.pdf">FP1: Plot
